appId: com.tylervo02.Cramr
---
- launchApp
- assertVisible: 'Sign in'
- assertVisible: "Email address or username"
- tapOn: "Email address or username"
- waitForAnimationToEnd
- inputText: "kevinyang@ucsd.edu"
- assertVisible: "Password"
- tapOn: "Password"
- inputText: "LOLXD@1234"
- tapOn: "Sign In"
# Temporary code because it would be difficult to simulate grabbing the code from the email as of right now.
- assertVisible: "Two-Factor Authentication"
- inputText: "111111"
- tapOn: "Enter"


